--- a/02-tic-tac-toe-starting-project/index.html
+++ b/02-tic-tac-toe-starting-project/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/game-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./main.css" />
     <title>React Tic-Tac-Toe</title>
   </head>
   <body>
+    <header>
+      <img src="game-logo.png" alt="Hand-drawn Tic-Tac-Toe game board" />
+      <h1>Tic-Tac-Toe</h1>
+    </header>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
